[tool.poetry]
name = "sondaj-live"
version = "0.1.0"
description = "A small UI utility for live sessions"
authors = ["Paul H <igomodo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
alembic = "^1.8.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
